# rt_kmr_control_code

./: CMakeLists.txt  package.xml
include/: kmr_iiwa.h
kmr_iiwa_urdf/urdf/: iiwa14.urdf  kmr_iiwa_carlos_kdl.urdf  kmriiwa.urdf  kmriiwa_carlos.urdf  kmriiwa_withcameraframes.urdf
launch/: kmr_iiwa.launch  kmr_iiwa_manual.launch
rviz/: kuka_kmr.rviz
scripts/kmr_iiwa/core/libraries/: aux_tools.py  kmr_iiwa.py
scripts/kmr_iiwa/core/processes/: IPC_processes_kuka.py  robot_kuka_processes.py  teleoperation_kuka_processes.py
scripts/kmr_iiwa/core/program_KUKA/: program_kuka.py  teleop_primary_secondary.py
src/kmr_iiwa/core/: kmr_iiwa.cpp
src/kmr_iiwa/redundancy_server/: kmr_iiwa_diff_ik_server.cpp
